--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.0.0",
     "next": "^13.4.13",
     "next-auth": "^4.23.0",
+    "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
