--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Google Provider
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+# Ikram Website
+NEXT_PUBLIC_IKRAM_WEBSITE_URL=""
