--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-auth": "^4.23.0",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
@@ -44,6 +45,7 @@
     "@types/eslint": "^8.44.2",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "6.3.0",
     "@typescript-eslint/parser": "6.3.0",
