Feat: Update Environment Variables

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ GOOGLE_CLIENT_SECRET=""
 
 # Ikram Website
 NEXT_PUBLIC_IKRAM_WEBSITE_URL=""
+
+# Image Upload Provider
+UPLOADTHING_SECRET=""
+UPLOADTHING_APP_ID=""
