Feat: Add Uploadthing Uploader

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@uploadthing/react": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "next": "^13.4.13",
@@ -41,10 +42,12 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
+    "uploadthing": "^5.3.3",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4",
     "zustand": "^4.4.1"
