--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "6.4.0",
     "@typescript-eslint/parser": "6.4.0",
     "autoprefixer": "^10.4.15",
+    "blurhash-from-url": "^0.0.7",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
     "initials": "^3.1.2",
